src/translations/ko/sdk/android/v5/features/device-info.mdx
---
title: "디바이스 정보 확인"
description: "해당 메서드를 사용하여 콜백에 세부 정보를 추가하고 리포트를 보완하시기 바랍니다."
slug: "ko/sdk/android/features/device-info"
multiVersion: true
---

Adjust SDK는 디바이스 정보를 반환하는 헬프 메서드가 포함되어 있습니다. 해당 메서드를 사용하여 콜백에 세부 정보를 추가하고 리포트를 보완하시기 바랍니다.

## [Adjust 디바이스 ID](adjust-device-identifier)

<CodeBlock title="메서드 서명">

```java
public static void getAdid(final OnAdidReadListener onAdidReadListener)
```

</CodeBlock>

Adjust는 각 기기에 대해 고유한 ADID\(Adjust 기기 ID\)를 생성합니다. `Adjust.getAdid` 메서드에 콜백 메서드를 전달하여 Adjust SDK에서 이 정보를 비동기적으로 요청할 수 있습니다.

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
Adjust.getAdid { adid ->
   // Your callback function
}
```

</Tab>
<Tab title="Java" sync="java" >

```java
Adjust.getAdid(new OnAdidReadListener() {
    @Override
    public void onAdidRead(String adid) {
      // Your callback function
    }
});

```

</Tab>
</Tabs>

## [Google Play Services Advertising ID](google-play-services-advertising-id)

<CodeBlock title="메서드 서명">

```java
public static void getGoogleAdId(Context context, OnDeviceIdsRead onDeviceIdRead)
```

</CodeBlock>

GPS ADID\(Google 플레이 서비스 광고 ID\)는 Android 기기에 대한 기기별 고유 ID입니다.

사용자는 기기에서 "광고 개인 최적화 사용 안 함\(Opt out of Ads Personalization\)"을 설정하고 GPS ADID 공유를 옵트아웃할 수 있습니다. 사용자가 이 설정을 활성화하면, 앱에서 GPS ADID 읽기 시도 시 Adjust SDK가 0으로 구성된 문자열을 반환합니다.

이 값에 액세스하려면 background thread에서 `getGoogleAdId` 메서드를 호출합니다. GPS ADID 값에 액세스하기 위한 델리게이트 함수를 할당합니다.

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
Adjust.getGoogleAdId(this, object : OnDeviceIdsRead {
   override fun onGoogleAdIdRead(googleAdId: String) {}
})
```

</Tab>
<Tab title="Java" sync="java" >

```java
Adjust.getGoogleAdId(this, new OnDeviceIdsRead() {
    @Override
    public void onGoogleAdIdRead(String googleAdId) {}
});
```

</Tab>
</Tabs>

## [Amazon Advertiser ID](amazon-advertiser-id)

<CodeBlock title="메서드 서명">

```java
public static void getAmazonAdId(final Context context,final OnAmazonAdIdReadListener onAmazonAdIdReadListener)
```

</CodeBlock>

Amazon Ad ID\(Amazon 광고 ID\)는 Android 기기에 대한 기기별 고유 ID입니다. `Adjust.getAmazonAdId` 메서드에 콜백 메서드를 전달하여 Adjust SDK에서 이 정보를 비동기적으로 요청할 수 있습니다.

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
Adjust.getAmazonAdId(applicationContext, object : OnAmazonAdIdReadListener {
   override fun onAmazonAdIdRead(amazonAdId: String) {}
   override fun onFail(message: String) {}
})
```

</Tab>
<Tab title="Java" sync="java" >

```java
Adjust.getAmazonAdId(getApplicationContext(), new OnAmazonAdIdReadListener() {
    @Override
    public void onAmazonAdIdRead(String amazonAdId) {
    }

    @Override
    public void onFail(String message) {
    }
});

```

</Tab>
</Tabs>

## [Adjust SDK 버전 게터](sdk-version-getter)

Adjust SDK의 버전을 읽으려면 콜백 함수를 `Adjust.getSdkVersion` 메서드에 전달합니다. 버전 번호는 콜백 함수에서 `String`으로 사용 가능합니다.

<Tabs>
<Tab title="Kotlin" sync="kotlin">

```kotlin
Adjust.getSdkVersion {sdkVersion ->
   // Your callback function
}
```

</Tab>
<Tab title="Java" sync="java">

```java
Adjust.getSdkVersion(new OnSdkVersionReadListener() {
   @Override
   public void onSdkVersionRead(String sdkVersion) {
      // Your callback function
   }
})
```

</Tab>
</Tabs>
